Fix buttons alignment

--- a/frontend/packages/tmw-main/components/Button/Button.module.scss
+++ b/frontend/packages/tmw-main/components/Button/Button.module.scss
@@ -6,7 +6,6 @@
     box-shadow: 2px 2px 10px 1px rgba(85, 85, 85, 0.20);
     display: inline-block;
     text-align: center;
-    margin: 0 10px;
     transition: all .15s ui.$app-curve-in-out-cubic;
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
